--- a/nc-news/src/index.css
+++ b/nc-news/src/index.css
@@ -12,3 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+.articles_preview_card {
+  background-color: darkred;
+  margin: 5%;
+  border: 5px solid yellow;
+}
