--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@
 }
 
 .homepage_container {
-
   background-color: darkred;
   border: 5px solid yellow;
   width: 100%;
@@ -31,8 +30,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-
 }
 
 .main_card_image {
@@ -76,11 +73,26 @@
 }
 
 .delete_button {
-border: 1px solid transparent;
-padding: 6%;
-padding-left: 70%;
-color: red;
-font-size: medium;
+  border: 1px solid transparent;
+  padding: 6%;
+  padding-left: 70%;
+  color: red;
+  font-size: medium;
+}
 
+.add_comment_text_field {
+  padding: 1%;
+  border: white;
+  border-top-left-radius: 10%;
+  border-top-right-radius: 10%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+  border-radius: 20%;
+}
 
+.submit_button {
+  border: 1px solid green;
+  border-radius: 20%;
+  color: green;
+  font-size: medium;
 }
